docs(usage): add coordinated shutdown example